--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <section id="what-we-do">
         <div class="what-back"></div>
         <div class="what-container">
-            <div>
+            <div class="what-img-child" >
                 <img class="whatImg" src="./img//what-img.png" alt="">
             </div>
             <div class="whatText">
@@ -297,7 +297,7 @@
             <div class="fcol2">
 
                 <div class="flogo">
-                    <img src="./img/flogo.png" alt="">
+                    <img class="flogob" src="./img/flogo.png" alt="">
                 </div>
                 <div class="address">
                     <p>112 West 34th Street, <br>
