--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
         <!-- Hero-img -->
         <div class="hero-section">
             <div class="hero-text">
+                <div class="featureImageMobile">
+                    <span>
+                        <img src="./img/hero-feature.png" alt="">
+                    </span>
+                </div>
                 <h1 class="hero-heading">Lorem Ipsum is simply<br>dummy text of the<br>printing </h1>
                 <p class="hero-desc">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
                     tempor invidunt ut labore
@@ -53,6 +58,7 @@
                 <span>
                     <img src="./img/hero-feature.png" alt="">
                 </span>
+                
             </div>
         </div>
     </section>
@@ -185,6 +191,7 @@
 
         </div>
     </section>
+    
 
 
     <!-- Projects -->
